add simple ensemble code

--- a/jn/main.ipynb
+++ b/jn/main.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
        "<module 'GradientBoosting' from '/Users/takutokotsubo/Desktop/Elo_kaggle/py/models/GradientBoosting.py'>"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,6 +109,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Read data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# read file\n",
+    "train_name = \"train_20181223\"; test_name = \"test_20181223\"; features_name = \"features_20181223\";\n",
+    "train, test, features, target = read_data(train_name,test_name,features_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Regession model"
    ]
   },
@@ -143,9 +161,6 @@
     }
    ],
    "source": [
-    "# read file\n",
-    "train_name = \"train_20181223\"; test_name = \"test_20181223\"; features_name = \"features_20181223\";\n",
-    "train, test, features, target = read_data(train_name,test_name,features_name)\n",
     "# Ridge regression\n",
     "clf = Ridge(alpha=100)\n",
     "val_pred_ridge, test_pred_ridge = Regressor.Regressors(clf,train,test,features,target) \n",
@@ -269,27 +284,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "201917 observations and 121 features in train set.\n",
-      "123623 observations and 119 features in test set.\n",
-      "118 observations and 1 features in features set.\n"
-     ]
-    }
-   ],
-   "source": [
-    "# read file\n",
-    "train_name = \"train_20181223\"; test_name = \"test_20181223\"; features_name = \"features_20181223\";\n",
-    "train, test, features, target = read_data(train_name,test_name,features_name)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -298,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -463,6 +457,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LIghtgbm validation RMSE: 3.6955\n"
+     ]
+    }
+   ],
+   "source": [
+    "# result\n",
+    "print(\"LIghtgbm validation RMSE: %.4f\" % np.sqrt(mean_squared_error(target.values, val_pred_lgb)))\n",
+    "# submit\n",
+    "# submit(test_pred_lgb,\"Lightgbm\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [
@@ -501,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,9 +542,7 @@
       "[0]\ttrain-rmse:3.94923\tvalid-rmse:3.9513\n",
       "Multiple eval metrics have been passed: 'valid-rmse' will be used for early stopping.\n",
       "\n",
-      "Will train until valid-rmse hasn't improved in 200 rounds.\n",
-      "[100]\ttrain-rmse:3.66902\tvalid-rmse:3.81999\n",
-      "[200]\ttrain-rmse:3.48333\tvalid-rmse:3.76091\n"
+      "Will train until valid-rmse hasn't improved in 200 rounds.\n"
      ]
     }
    ],
@@ -543,7 +555,55 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# result\n",
+    "print(\"Xgboost validation RMSE: %.4f\" % np.sqrt(mean_squared_error(target.values, val_pred_xgb)))\n",
+    "# submit\n",
+    "# submit(test_pred_xgb,\"Xgboost\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ensemble\n",
+    "\n",
+    "Ensemble.pyは作業が進み次第記入する."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# data set \n",
+    "train_stack = np.vstack([val_pred_lgb, val_pred_lgb]).transpose()\n",
+    "test_stack = np.vstack([test_pred_lgb, test_pred_xgb]).transpose()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ridge regression\n",
+    "clf = Ridge(alpha=100)\n",
+    "val_pred_ensemble, test_pred_ensemble = Regressor.Regressors(clf,train_stack,test_stack,features,target) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# result\n",
+    "print(\"Ensemble validation RMSE: %.4f\" % np.sqrt(mean_squared_error(target.values, val_pred_ensemble)))\n",
+    "# submit\n",
+    "submit(test_pred_ensemble,\"lgb-xgb\")"
+   ]
   }
  ],
  "metadata": {
