add Ensemble code and submit file format

--- a/jn/main.ipynb
+++ b/jn/main.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
     "import feather # fast reading data\n",
     "from datetime import datetime\n",
     "from sklearn.metrics import mean_squared_error\n",
-    "import Regressor\n",
+    "import Regressor, Ensemble\n",
     "import GradientBoosting as gb\n",
     "from sklearn.linear_model import Ridge, Lasso\n",
     "from sklearn.ensemble import BaggingRegressor\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
        "<module 'GradientBoosting' from '/Users/takutokotsubo/Desktop/Elo_kaggle/py/models/GradientBoosting.py'>"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,6 +66,7 @@
    "source": [
     "import importlib\n",
     "importlib.reload(Regressor)\n",
+    "importlib.reload(Ensemble)\n",
     "importlib.reload(gb)"
    ]
   },
@@ -531,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +543,113 @@
       "[0]\ttrain-rmse:3.94923\tvalid-rmse:3.9513\n",
       "Multiple eval metrics have been passed: 'valid-rmse' will be used for early stopping.\n",
       "\n",
-      "Will train until valid-rmse hasn't improved in 200 rounds.\n"
+      "Will train until valid-rmse hasn't improved in 200 rounds.\n",
+      "[100]\ttrain-rmse:3.66902\tvalid-rmse:3.81999\n",
+      "[200]\ttrain-rmse:3.48333\tvalid-rmse:3.76091\n",
+      "[300]\ttrain-rmse:3.35288\tvalid-rmse:3.73352\n",
+      "[400]\ttrain-rmse:3.25331\tvalid-rmse:3.71971\n",
+      "[500]\ttrain-rmse:3.1647\tvalid-rmse:3.71115\n",
+      "[600]\ttrain-rmse:3.09397\tvalid-rmse:3.70639\n",
+      "[700]\ttrain-rmse:3.04066\tvalid-rmse:3.70355\n",
+      "[800]\ttrain-rmse:2.99817\tvalid-rmse:3.70238\n",
+      "[900]\ttrain-rmse:2.96099\tvalid-rmse:3.70144\n",
+      "[1000]\ttrain-rmse:2.9292\tvalid-rmse:3.70107\n",
+      "[1100]\ttrain-rmse:2.89925\tvalid-rmse:3.7004\n",
+      "[1200]\ttrain-rmse:2.86968\tvalid-rmse:3.70028\n",
+      "[1300]\ttrain-rmse:2.8401\tvalid-rmse:3.70007\n",
+      "[1400]\ttrain-rmse:2.8117\tvalid-rmse:3.70001\n",
+      "[1500]\ttrain-rmse:2.78453\tvalid-rmse:3.70025\n",
+      "Stopping. Best iteration:\n",
+      "[1386]\ttrain-rmse:2.81552\tvalid-rmse:3.69989\n",
+      "\n",
+      "fold n°2\n",
+      "[0]\ttrain-rmse:3.94763\tvalid-rmse:3.95705\n",
+      "Multiple eval metrics have been passed: 'valid-rmse' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-rmse hasn't improved in 200 rounds.\n",
+      "[100]\ttrain-rmse:3.66163\tvalid-rmse:3.8257\n",
+      "[200]\ttrain-rmse:3.47289\tvalid-rmse:3.76638\n",
+      "[300]\ttrain-rmse:3.33707\tvalid-rmse:3.73891\n",
+      "[400]\ttrain-rmse:3.2336\tvalid-rmse:3.72404\n",
+      "[500]\ttrain-rmse:3.1443\tvalid-rmse:3.7143\n",
+      "[600]\ttrain-rmse:3.07466\tvalid-rmse:3.70921\n",
+      "[700]\ttrain-rmse:3.02366\tvalid-rmse:3.70635\n",
+      "[800]\ttrain-rmse:2.97786\tvalid-rmse:3.70469\n",
+      "[900]\ttrain-rmse:2.94092\tvalid-rmse:3.70378\n",
+      "[1000]\ttrain-rmse:2.9047\tvalid-rmse:3.70317\n",
+      "[1100]\ttrain-rmse:2.87187\tvalid-rmse:3.7027\n",
+      "[1200]\ttrain-rmse:2.8412\tvalid-rmse:3.70253\n",
+      "[1300]\ttrain-rmse:2.80829\tvalid-rmse:3.7026\n",
+      "[1400]\ttrain-rmse:2.78127\tvalid-rmse:3.70245\n",
+      "[1500]\ttrain-rmse:2.75386\tvalid-rmse:3.7025\n",
+      "Stopping. Best iteration:\n",
+      "[1385]\ttrain-rmse:2.78577\tvalid-rmse:3.70231\n",
+      "\n",
+      "fold n°3\n",
+      "[0]\ttrain-rmse:3.95096\tvalid-rmse:3.94486\n",
+      "Multiple eval metrics have been passed: 'valid-rmse' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-rmse hasn't improved in 200 rounds.\n",
+      "[100]\ttrain-rmse:3.6704\tvalid-rmse:3.81494\n",
+      "[200]\ttrain-rmse:3.48353\tvalid-rmse:3.75597\n",
+      "[300]\ttrain-rmse:3.34854\tvalid-rmse:3.72848\n",
+      "[400]\ttrain-rmse:3.24282\tvalid-rmse:3.71398\n",
+      "[500]\ttrain-rmse:3.15453\tvalid-rmse:3.70571\n",
+      "[600]\ttrain-rmse:3.08819\tvalid-rmse:3.70078\n",
+      "[700]\ttrain-rmse:3.03325\tvalid-rmse:3.69786\n",
+      "[800]\ttrain-rmse:2.98811\tvalid-rmse:3.6958\n",
+      "[900]\ttrain-rmse:2.95278\tvalid-rmse:3.69476\n",
+      "[1000]\ttrain-rmse:2.92009\tvalid-rmse:3.69409\n",
+      "[1100]\ttrain-rmse:2.88887\tvalid-rmse:3.69361\n",
+      "[1200]\ttrain-rmse:2.86083\tvalid-rmse:3.69363\n",
+      "[1300]\ttrain-rmse:2.83252\tvalid-rmse:3.69342\n",
+      "[1400]\ttrain-rmse:2.80268\tvalid-rmse:3.69358\n",
+      "Stopping. Best iteration:\n",
+      "[1260]\ttrain-rmse:2.84415\tvalid-rmse:3.69331\n",
+      "\n",
+      "fold n°4\n",
+      "[0]\ttrain-rmse:3.94968\tvalid-rmse:3.95072\n",
+      "Multiple eval metrics have been passed: 'valid-rmse' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-rmse hasn't improved in 200 rounds.\n",
+      "[100]\ttrain-rmse:3.67153\tvalid-rmse:3.81714\n",
+      "[200]\ttrain-rmse:3.48448\tvalid-rmse:3.75653\n",
+      "[300]\ttrain-rmse:3.3527\tvalid-rmse:3.72883\n",
+      "[400]\ttrain-rmse:3.24685\tvalid-rmse:3.71442\n",
+      "[500]\ttrain-rmse:3.15995\tvalid-rmse:3.70647\n",
+      "[600]\ttrain-rmse:3.09155\tvalid-rmse:3.70138\n",
+      "[700]\ttrain-rmse:3.0362\tvalid-rmse:3.69871\n",
+      "[800]\ttrain-rmse:2.99182\tvalid-rmse:3.69704\n",
+      "[900]\ttrain-rmse:2.9541\tvalid-rmse:3.69614\n",
+      "[1000]\ttrain-rmse:2.91962\tvalid-rmse:3.69549\n",
+      "[1100]\ttrain-rmse:2.88971\tvalid-rmse:3.6952\n",
+      "[1200]\ttrain-rmse:2.85934\tvalid-rmse:3.69514\n",
+      "[1300]\ttrain-rmse:2.833\tvalid-rmse:3.69504\n",
+      "[1400]\ttrain-rmse:2.80523\tvalid-rmse:3.69513\n",
+      "Stopping. Best iteration:\n",
+      "[1244]\ttrain-rmse:2.84869\tvalid-rmse:3.69493\n",
+      "\n",
+      "fold n°5\n",
+      "[0]\ttrain-rmse:3.94944\tvalid-rmse:3.95104\n",
+      "Multiple eval metrics have been passed: 'valid-rmse' will be used for early stopping.\n",
+      "\n",
+      "Will train until valid-rmse hasn't improved in 200 rounds.\n",
+      "[100]\ttrain-rmse:3.6652\tvalid-rmse:3.82439\n",
+      "[200]\ttrain-rmse:3.47558\tvalid-rmse:3.76641\n",
+      "[300]\ttrain-rmse:3.33764\tvalid-rmse:3.74002\n",
+      "[400]\ttrain-rmse:3.22989\tvalid-rmse:3.7269\n",
+      "[500]\ttrain-rmse:3.14457\tvalid-rmse:3.72026\n",
+      "[600]\ttrain-rmse:3.07482\tvalid-rmse:3.71612\n",
+      "[700]\ttrain-rmse:3.02155\tvalid-rmse:3.71359\n",
+      "[800]\ttrain-rmse:2.976\tvalid-rmse:3.712\n",
+      "[900]\ttrain-rmse:2.93899\tvalid-rmse:3.71111\n",
+      "[1000]\ttrain-rmse:2.90327\tvalid-rmse:3.7104\n",
+      "[1100]\ttrain-rmse:2.87112\tvalid-rmse:3.71037\n",
+      "[1200]\ttrain-rmse:2.83964\tvalid-rmse:3.7098\n",
+      "[1300]\ttrain-rmse:2.81073\tvalid-rmse:3.71006\n",
+      "Stopping. Best iteration:\n",
+      "[1188]\ttrain-rmse:2.84355\tvalid-rmse:3.70979\n",
+      "\n"
      ]
     }
    ],
@@ -552,9 +659,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Xgboost validation RMSE: 3.7002\n"
+     ]
+    }
+   ],
    "source": [
     "# result\n",
     "print(\"Xgboost validation RMSE: %.4f\" % np.sqrt(mean_squared_error(target.values, val_pred_xgb)))\n",
@@ -573,24 +688,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
     "# data set \n",
-    "train_stack = np.vstack([val_pred_lgb, val_pred_lgb]).transpose()\n",
+    "train_stack = np.vstack([val_pred_lgb, val_pred_xgb]).transpose()\n",
     "test_stack = np.vstack([test_pred_lgb, test_pred_xgb]).transpose()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fold n°1\n",
+      "fold n°2\n",
+      "fold n°3\n",
+      "fold n°4\n",
+      "fold n°5\n"
+     ]
+    }
+   ],
    "source": [
     "# Ridge regression\n",
     "clf = Ridge(alpha=100)\n",
-    "val_pred_ensemble, test_pred_ensemble = Regressor.Regressors(clf,train_stack,test_stack,features,target) "
+    "val_pred_ensemble, test_pred_ensemble = Ensemble.Ensembles(clf,train_stack,test_stack,train,target) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ensemble validation RMSE: 3.6935\n"
+     ]
+    }
+   ],
+   "source": [
+    "# result\n",
+    "print(\"Ensemble validation RMSE: %.4f\" % np.sqrt(mean_squared_error(target.values, val_pred_ensemble)))\n",
+    "# submit\n",
+    "submit(test_pred_ensemble,\"lgb-xgb-stack\")"
    ]
   },
   {
@@ -598,12 +745,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# result\n",
-    "print(\"Ensemble validation RMSE: %.4f\" % np.sqrt(mean_squared_error(target.values, val_pred_ensemble)))\n",
-    "# submit\n",
-    "submit(test_pred_ensemble,\"lgb-xgb\")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
