read data and submit functions move base.py file

--- a/jn/main.ipynb
+++ b/jn/main.ipynb
@@ -9,13 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys, os\n",
     "home_path = os.path.expanduser(\"~\")\n",
     "sys.path.append(home_path + '/Desktop/Elo_kaggle/py/models/')\n",
+    "sys.path.append(home_path + '/Desktop/Elo_kaggle/py/')\n",
     "sys.path.append(home_path + '/.pyenv/versions/3.6.5/lib/python3.6/site-packages/xgboost-0.81-py3.6.egg')"
    ]
   },
@@ -28,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,6 +38,7 @@
     "import feather # fast reading data\n",
     "from datetime import datetime\n",
     "from sklearn.metrics import mean_squared_error\n",
+    "import base\n",
     "import Regressor, Ensemble\n",
     "import GradientBoosting as gb\n",
     "from sklearn.linear_model import Ridge, Lasso\n",
@@ -49,61 +51,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<module 'GradientBoosting' from '/Users/takutokotsubo/Desktop/Elo_kaggle/py/models/GradientBoosting.py'>"
+       "<module 'GradientBoosting' from '/Users/takuto/Desktop/Elo_kaggle/py/models/GradientBoosting.py'>"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import importlib\n",
+    "importlib.reload(base)\n",
     "importlib.reload(Regressor)\n",
     "importlib.reload(Ensemble)\n",
     "importlib.reload(gb)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# function"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def read_data(train_name,test_name,features_name):\n",
-    "    #Loading Train and Test Data\n",
-    "    Base = home_path + \"/Desktop/Elo_kaggle/input/processed/\"\n",
-    "    train = feather.read_dataframe(Base + train_name + \".feather\")\n",
-    "    test = feather.read_dataframe(Base + test_name + \".feather\")\n",
-    "    features = feather.read_dataframe(Base + features_name + \".feather\")\n",
-    "    # check data frame\n",
-    "    print(\"{} observations and {} features in train set.\".format(train.shape[0],train.shape[1]))\n",
-    "    print(\"{} observations and {} features in test set.\".format(test.shape[0],test.shape[1]))\n",
-    "    print(\"{} observations and {} features in features set.\".format(features.shape[0],features.shape[1]))\n",
-    "    # transform\n",
-    "    target = train['target']; del train['target'] # data set\n",
-    "    features = features[\"feature\"].tolist() # features list\n",
-    "    return train, test, features, target\n",
-    "def submit(predict,tech):\n",
-    "    # make submit file\n",
-    "    submit_file = feather.read_dataframe(home_path + \"/Desktop/Elo_kaggle/input/feather/sample_submission.feather\")\n",
-    "    submit_file[\"target\"] = predict\n",
-    "    # save for output/(technic name + datetime + .csv)\n",
-    "    file_name = home_path + '/Desktop/Elo_kaggle/output/' + tech + datetime.now().strftime(\"%Y%m%d\") + \".csv\"\n",
-    "    submit_file.to_csv(file_name, index=False)"
    ]
   },
   {
@@ -115,13 +82,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ArrowIOError",
+     "evalue": "Failed to open local file: /Users/takuto/Desktop/Elo_kaggle/input/processed/train_20181223.feather , error: No such file or directory",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mArrowIOError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-f2fbcdef2c25>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# read file\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mtrain_name\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"train_20181223\"\u001b[0m\u001b[0;34m;\u001b[0m \u001b[0mtest_name\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"test_20181223\"\u001b[0m\u001b[0;34m;\u001b[0m \u001b[0mfeatures_name\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"features_20181223\"\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mtrain\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeatures\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbase\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_name\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtest_name\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mfeatures_name\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mhome_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/Desktop/Elo_kaggle/py/base.py\u001b[0m in \u001b[0;36mread_data\u001b[0;34m(train_name, test_name, features_name, home_path)\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0;31m#Loading Train and Test Data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0mBase\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhome_path\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\"/Desktop/Elo_kaggle/input/processed/\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m     \u001b[0mtrain\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfeather\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_dataframe\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mBase\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mtrain_name\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\".feather\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m     \u001b[0mtest\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfeather\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_dataframe\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mBase\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mtest_name\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\".feather\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0mfeatures\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfeather\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_dataframe\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mBase\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mfeatures_name\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\".feather\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.pyenv/versions/anaconda3-5.1.0/envs/py3.6.5/lib/python3.6/site-packages/pyarrow/feather.py\u001b[0m in \u001b[0;36mread_feather\u001b[0;34m(source, columns, use_threads)\u001b[0m\n\u001b[1;32m    207\u001b[0m     \u001b[0mdf\u001b[0m \u001b[0;34m:\u001b[0m \u001b[0mpandas\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    208\u001b[0m     \"\"\"\n\u001b[0;32m--> 209\u001b[0;31m     \u001b[0mreader\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mFeatherReader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msource\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    210\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mreader\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_pandas\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0muse_threads\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0muse_threads\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    211\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.pyenv/versions/anaconda3-5.1.0/envs/py3.6.5/lib/python3.6/site-packages/pyarrow/feather.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, source)\u001b[0m\n\u001b[1;32m     43\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msource\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msource\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msource\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 45\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msource\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     46\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     47\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.pyenv/versions/anaconda3-5.1.0/envs/py3.6.5/lib/python3.6/site-packages/pyarrow/feather.pxi\u001b[0m in \u001b[0;36mpyarrow.lib.FeatherReader.open\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32m~/.pyenv/versions/anaconda3-5.1.0/envs/py3.6.5/lib/python3.6/site-packages/pyarrow/io.pxi\u001b[0m in \u001b[0;36mpyarrow.lib.get_reader\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32m~/.pyenv/versions/anaconda3-5.1.0/envs/py3.6.5/lib/python3.6/site-packages/pyarrow/io.pxi\u001b[0m in \u001b[0;36mpyarrow.lib.memory_map\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32m~/.pyenv/versions/anaconda3-5.1.0/envs/py3.6.5/lib/python3.6/site-packages/pyarrow/io.pxi\u001b[0m in \u001b[0;36mpyarrow.lib.MemoryMappedFile._open\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32m~/.pyenv/versions/anaconda3-5.1.0/envs/py3.6.5/lib/python3.6/site-packages/pyarrow/error.pxi\u001b[0m in \u001b[0;36mpyarrow.lib.check_status\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mArrowIOError\u001b[0m: Failed to open local file: /Users/takuto/Desktop/Elo_kaggle/input/processed/train_20181223.feather , error: No such file or directory"
+     ]
+    }
+   ],
    "source": [
     "# read file\n",
     "train_name = \"train_20181223\"; test_name = \"test_20181223\"; features_name = \"features_20181223\";\n",
-    "train, test, features, target = read_data(train_name,test_name,features_name)"
+    "train, test, features, target = base.read_data(train_name,test_name,features_name,home_path)"
    ]
   },
   {
