--- a/jn/main.ipynb
+++ b/jn/main.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
        "<module 'GradientBoosting' from '/Users/takuto/Desktop/Elo_kaggle/py/models/GradientBoosting.py'>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,27 +280,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "positional argument follows keyword argument (<ipython-input-8-9ac3ee31f6f1>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-9ac3ee31f6f1>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    param_set = base.open_parameter(file_name = 'kernel_param_lgb', home_path)\u001b[0m\n\u001b[0m                                                                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m positional argument follows keyword argument\n"
+     ]
+    }
+   ],
    "source": [
     "# parameters\n",
-    "param_set = {'num_leaves': 31,\n",
-    "             'min_data_in_leaf': 30, \n",
-    "             'objective':'regression',\n",
-    "             'max_depth': -1,\n",
-    "             'learning_rate': 0.01,\n",
-    "             \"min_child_samples\": 20,\n",
-    "             \"boosting\": \"gbdt\",\n",
-    "             \"feature_fraction\": 0.9,\n",
-    "             \"bagging_freq\": 1,\n",
-    "             \"bagging_fraction\": 0.9 ,\n",
-    "             \"bagging_seed\": 11,\n",
-    "             \"metric\": 'rmse',\n",
-    "             \"lambda_l1\": 0.1,\n",
-    "             \"verbosity\": -1,\n",
-    "             \"nthread\": 4,\n",
-    "             \"random_state\": 831}"
+    "param_set = base.open_parameter(file_name = 'kernel_param_lgb', home_path)"
    ]
   },
   {
