add parameter set

--- a/jn/Make_Parameters.ipynb
+++ b/jn/Make_Parameters.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,6 +86,31 @@
     "             \"nthread\": 4,\n",
     "             \"random_state\": 831}\n",
     "save_list(param_set,file_name = 'kernel_param_lgb')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# parameters\n",
+    "# https://www.kaggle.com/fabiendaniel/hyperparameter-tuning\n",
+    "param_set = {'num_leaves': 111,\n",
+    "             'min_data_in_leaf': 149, \n",
+    "             'objective':'regression',\n",
+    "             'max_depth': 9,\n",
+    "             'learning_rate': 0.005,\n",
+    "             \"boosting\": \"gbdt\",\n",
+    "             \"feature_fraction\": 0.7522,\n",
+    "             \"bagging_freq\": 1,\n",
+    "             \"bagging_fraction\": 0.7083 ,\n",
+    "             \"bagging_seed\": 11,\n",
+    "             \"metric\": 'rmse',\n",
+    "             \"lambda_l1\": 0.2634,\n",
+    "             \"random_state\": 133,\n",
+    "             \"verbosity\": -1}\n",
+    "save_list(param_set,file_name = 'kernel_param_tuning_lgb')"
    ]
   },
   {
