xgboostにおけるパラメータを追加

--- a/jn/Make_Parameters.ipynb
+++ b/jn/Make_Parameters.ipynb
@@ -122,6 +122,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# parameters (kernel)\n",
+    "param_set = {'eta': 0.005, \n",
+    "             'max_depth': 10, \n",
+    "             'subsample': 0.8, \n",
+    "             'colsample_bytree': 0.8, \n",
+    "             'objective': 'reg:linear', \n",
+    "             'eval_metric': 'rmse', \n",
+    "             'silent': True}\n",
+    "save_list(param_set,file_name = 'kernel_param_xgb')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
